# panoptisch

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  LIMITATIONS.md  README.md  pyproject.toml
panopticon/: __init__.py  imports.py  lib_resolver.py  scanner.py  visitor.py
panoptisch/: __init__.py  cache.py  imports.py  lib_resolver.py  sandbox.py  scanner.py  util.py  visitor.py
