[tool.poetry]
name = "panoptisch"
version = "0.1.6"
description = "A recursive Python dependency scanner."
authors = ["aarnav <aarnavbos@gmail.com>"]


homepage = "https://github.com/R9295/panoptisch"
repository = "https://github.com/R9295/panoptisch"
documentation = "https://github.com/R9295/panoptisch"

license = "GPL-3.0"


keywords = [
    "Dependency Scanner",
    "Security",
    "Supply Chain",
    "Tool",
]


readme = "README.md"
classifiers = [
    "Topic :: Security",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[tool.poetry.dependencies]
python = "^3.10"
anytree = "^2.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipdb = "^0.13.9"
pytest = "^7.1.2"
isort = "^5.10.1"
pyfakefs = "^4.6.2"
pre-commit = "^2.20.0"
coverage = "^6.4.2"

[tool.poetry.scripts]
panoptisch = "panoptisch:main"

[tool.black]
line-length = 79
include = '\.pyi?$'
extend-include = true
exclude = '''
/(
    \.git
  | \.toml
  | \.lock
  | \.md
  | \.env
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
